--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,9 @@
     "target": "es6", 
     "module": "commonjs",
     "outDir": "./Build", 
-    "watch": true,
+    //"watch": true,
     "resolveJsonModule": true,
-    "sourceMap": true,
+    //"sourceMap": true,
     "strict": true,
     "declaration": true
   }
